[bdist_rpm]
doc_files = docs AUTHORS INSTALL LICENSE README.md

[flake8]
exclude = build,.git,lib,bin
ignore = E251
# ,E123,E128,E402,E501,W503,E731,W601
max-line-length = 79

[isort]
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length=79
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = meringue
multi_line_output = 5
not_skip = __init__.py

[metadata]
license-file = LICENSE

[wheel]
universal = 1
